--- a/server/views/guest_post.html
+++ b/server/views/guest_post.html
@@ -89,40 +89,28 @@
 
                   <tr style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
                     <td class="content-block" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                      I'm Parker, the founder of DEALSBOX - A daily deals mobile app for aggregating nearby deals in one place.
+                      How is your SEO going for you? We are building a new SEO Toolbox for Everyone, Let's say SEO DIY:)
                     </td>
                   </tr>
 
                   <tr style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
                     <td class="content-block" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                      I love your content and the lessons you share with your readers.
-                    </td>
-                  </tr>
-
-
-                  <tr style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
-                    <td class="content-block" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                      I'm reaching out to see if you'd be interested in featuring a guest post from me about savings and daily deals. I'm also open to a partnership that will be beneficial to both of us.
-                    </td>
-                  </tr>
-
-                  <tr style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
-                    <td class="content-block" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                      You can find more about the app on
-                      <a href="http://dealsbox.co/"></a>http://dealsbox.co
+                      This will be a Dashboard with all the tools you need to improve your website rankings.
                     </td>
                   </tr>
 
 
                   <tr style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
                     <td class="content-block" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                      Thanks so much for considering my request! And I assure you, I will make this process as seamless as possible for you by sending you a formatted document with links included that you can copy and paste directly into an editor.
+                      You can request an early access here <a href="http://indataly.com/#em">http://indataly.com/#em</a>
                     </td>
                   </tr>
+
                   <tr style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
                     <td class="content-block" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
                       Best,
-                      <br> Parker, @parkerituk
+                      <br> Frank,
+                      <br> Chief Product Guy, INDATALY
                     </td>
                   </tr>
                 </table>
