--- a/server/views/guest_post.html
+++ b/server/views/guest_post.html
@@ -89,28 +89,28 @@
 
                   <tr style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
                     <td class="content-block" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                      How is your SEO going for you? We are building a new SEO Toolbox for Everyone, Let's say SEO DIY:)
+                      I'm Parker, the Founder of http://indataly.com/email, A Dashboard with all the tools you need to improve your website performance, rankings in Google, and ultimately more website traffic - Let's say SEO DIY:)
                     </td>
                   </tr>
 
-                  <tr style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
+<!--                   <tr style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
                     <td class="content-block" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
                       This will be a Dashboard with all the tools you need to improve your website rankings.
                     </td>
-                  </tr>
+                  </tr> -->
 
 
                   <tr style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
                     <td class="content-block" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                      You can request an early access here <a href="http://indataly.com/#em">http://indataly.com/#em</a>
+                      Join thousands of bloggers and website owners that have already requested early access here http://indataly.com/email
                     </td>
                   </tr>
 
                   <tr style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
                     <td class="content-block" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
                       Best,
-                      <br> Frank,
-                      <br> Chief Product Guy, INDATALY
+                      <br> Parker,
+                      <br> Founder @INDATALY
                     </td>
                   </tr>
                 </table>
